--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,13 @@
+boto3==1.28.15
+botocore==1.31.15
 cryptg==0.4.0
+jmespath==1.0.1
 pyaes==1.6.1
 pyasn1==0.5.0
+python-dateutil==2.8.2
 python-dotenv==1.0.0
 rsa==4.9
+s3transfer==0.6.1
+six==1.16.0
 Telethon==1.29.2
+urllib3==1.26.16
