--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,25 @@
-boto3==1.28.15
-botocore==1.31.15
-cryptg==0.4.0
+aioboto3==12.3.0
+aiobotocore==2.11.2
+aiohttp==3.9.3
+aioitertools==0.11.0
+aiosignal==1.3.1
+attrs==23.2.0
+boto3==1.34.34
+botocore==1.34.34
+frozenlist==1.4.1
+idna==3.6
 jmespath==1.0.1
+multidict==6.0.5
 pyaes==1.6.1
-pyasn1==0.5.0
-python-dateutil==2.8.2
-python-dotenv==1.0.0
+pyasn1==0.6.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 rsa==4.9
-s3transfer==0.6.1
+s3transfer==0.10.1
 six==1.16.0
-Telethon==1.29.2
+Telethon==1.34.0
 transitions==0.9.0
-urllib3==1.26.16
+ulid-py==1.1.0
+urllib3==2.0.7
+wrapt==1.16.0
+yarl==1.9.4
